--- a/src/ContactManager/templates/landing.phtml
+++ b/src/ContactManager/templates/landing.phtml
@@ -31,12 +31,23 @@ $this->inlineScript()
     <div class="login-logo"> <a href="../index2.html"><b>Admin</b>LTE</a> </div> <!-- /.login-logo -->
     <div class="card">
         <div class="card-body login-card-body">
+            <?php
+            if (! isset($this->error)) {
+            ?>
             <p class="login-box-msg">Sign in to start your session</p>
-            <form action="../index3.html" method="post">
-                <div class="input-group mb-3"> <input type="email" class="form-control" placeholder="Email">
+            <?php
+            } else {
+            ?>
+            <p class="login-box-msg"><?=$this->error?></p>
+            <?php
+            }
+            ?>
+
+            <form action="<?=$this->url('login')?>" method="post">
+                <div class="input-group mb-3"> <input name="email" type="email" class="form-control" placeholder="Email">
                     <div class="input-group-text"> <span class="bi bi-envelope"></span> </div>
                 </div>
-                <div class="input-group mb-3"> <input type="password" class="form-control" placeholder="Password">
+                <div class="input-group mb-3"> <input name="password" type="password" class="form-control" placeholder="Password">
                     <div class="input-group-text"> <span class="bi bi-lock-fill"></span> </div>
                 </div> <!--begin::Row-->
                 <div class="row">
