--- a/src/App/templates/layout/default.phtml
+++ b/src/App/templates/layout/default.phtml
@@ -172,7 +172,7 @@ $this->inlineScript()
       </div>
       <div class="modal-body">
           <form id="create-contact-form" action="<?=$this->url('contact.create.contact')?>" method="post">
-              <input id="contact-list-id" name="id" type="hidden">
+              <input id="contact-list-id" name="list_id" type="hidden">
               <div class="input-group mb-3">
                 <input name="first_name" type="text" class="form-control" placeholder="First Name">
               </div>
