--- a/src/ContactManager/templates/dashboard.phtml
+++ b/src/ContactManager/templates/dashboard.phtml
@@ -41,7 +41,7 @@
                                     <i data-lte-icon="expand" class="bi bi-plus-lg"></i>
                                     <i data-lte-icon="collapse" class="bi bi-dash-lg"></i>
                                 </button>
-                                <button type="button" data-cmlist-id="<?=$list['id']?>" class="create-contact-button btn btn-primary btn-sm">
+                                <button type="button" role="button" data-cmlist-id="<?=$list['id']?>" class="create-contact-button btn btn-primary btn-sm">
                                     <span>New Contact</span>
                                 </button>
                             </div>
