Added code for Tracy Debugger integration while in development mode. Signed-off-by: Joey Smith <jsmith@webinertia.net>
Signed-off-by: Joey Smith <jsmith@webinertia.net>

--- a/src/ContactManager/templates/dashboard.phtml
+++ b/src/ContactManager/templates/dashboard.phtml
@@ -42,7 +42,7 @@
                                     <i data-lte-icon="collapse" class="bi bi-dash-lg"></i>
                                 </button>
                                 <button type="button" role="button" data-cmlist-id="<?=$list['id']?>" class="create-contact-button btn btn-primary btn-sm">
-                                    <span>New Contact</span>
+                                    New Contact
                                 </button>
                             </div>
                         </div>
@@ -78,3 +78,6 @@
         </div> <!-- /.row (main row) -->
     </div> <!--end::Container-->
 </div> <!--end::App Content-->
+<?php
+$this->tracy()->stopWatch();
+?>
