--- a/src/ContactManager/templates/partial/sortable-contact.phtml
+++ b/src/ContactManager/templates/partial/sortable-contact.phtml
@@ -9,3 +9,6 @@
         <li class="list-group-item">Email: <?=$contact['email']?></li>
     </ul>
 </div> <!-- /.card -->
+<?php
+$this->tracy()->stopWatch();
+?>
