--- a/src/ContactManager/templates/partials/sortable-list.phtml
+++ b/src/ContactManager/templates/partials/sortable-list.phtml
@@ -1,4 +1,4 @@
-<div class="col connectedSortable">
+<div id="list_<?=$list['id']?>">
     <div class="card mb-4">
         <div class="card-header">
             <h2 class="card-title"><?=$list['list_name']?></h2>
