--- a/src/App/templates/layout/admin.phtml
+++ b/src/App/templates/layout/admin.phtml
@@ -222,7 +222,7 @@ $this->inlineScript()
         <h1 class="modal-title fs-5" id="createContactModalLabel">New Contact</h1>
       </div>
       <div class="modal-body">
-          <form id="create-contact-form" action="<?=$this->url('contact.create.contact')?>" method="post">
+          <form id="create-contact-form" action="<?=$this->url('cm.create.contact')?>" method="post">
               <input id="contact-list-id" name="list_id" type="hidden">
               <div class="input-group mb-3">
                 <input name="first_name" type="text" class="form-control" placeholder="First Name">
@@ -364,7 +364,7 @@ $this->inlineScript()
                                 [
                                     'class' => 'nav-link active',
                                     'href' => '#',
-                                    'hx-get' => $this->url('contacts.dashboard'),
+                                    'hx-get' => $this->url('cm.dashboard'),
                                     'hx-target' => '#admin-work-space'
                                 ],
                                 'a',
@@ -373,7 +373,7 @@ $this->inlineScript()
                                     Contact Manager
                                     <i class="nav-arrow bi bi-chevron-right"></i>
                                 </p>')?>
-                            <a href="#" class="nav-link active" hx-get="<?=$this->url('contacts.dashboard')?>" hx-target="#admin-work-space">
+                            <a href="#" class="nav-link active" hx-get="<?=$this->url('cm.dashboard')?>" hx-target="#admin-work-space">
                                 <i class="nav-icon bi bi-speedometer"></i>
                                 <p>
                                     Contact Manager
@@ -558,14 +558,8 @@ $this->inlineScript()
             <!--end::Copyright-->
         </footer> <!--end::Footer-->
     </div> <!--end::App Wrapper--> <!--begin::Script--> <!--begin::Third Party Plugin(OverlayScrollbars)-->
-    <div id="modal-target"
-        class="modal modal-blur fade"
-        style="display: none"
-        aria-hidden="false"
-        tabindex="-1">
-        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
-            <div class="modal-content"></div>
-        </div>
+    <div id="modal" class="modal fade">
+        <div id="dialog" class="modal-dialog" hx-target="this"></div>
     </div>
     <?=$this->inlineScript()?>
 </body>
