Moves JS code to ContanManager dashboard view Signed-off-by: Joey Smith <jsmith@webinertia.net>
Signed-off-by: Joey Smith <jsmith@webinertia.net>

--- a/src/ContactManager/templates/contact-manager/dashboard.phtml
+++ b/src/ContactManager/templates/contact-manager/dashboard.phtml
@@ -82,3 +82,44 @@
         </div> <!-- /.row (main row) -->
     </div> <!--end::Container-->
 </div> <!--end::App Content-->
+
+<?=$this->inlineScript()->appendScript(
+'
+    htmx.onLoad(function(content) {
+        var sortables     = content.querySelectorAll(".connectedSortable");
+        const cardHeaders = content.querySelectorAll(".connectedSortable .card-header");
+
+        cardHeaders.forEach((cardHeader) => {
+            cardHeader.style.cursor = "move";
+        });
+
+        for (var i = 0; i < sortables.length; i++) {
+            var sortable = sortables[i];
+            new Sortable(sortable, {
+                group: {
+                    name: "shared",
+                },
+                handle: ".card-header",
+            });
+        }
+    });
+
+    const modal = new bootstrap.Modal(document.getElementById("modal"));
+    htmx.on("htmx:afterSwap", (e) => {
+        if (e.detail.target.id == "dialog") {
+            modal.show();
+        }
+    });
+
+    htmx.on("htmx:beforeSwap", (e) => {
+        //console.log(e.detail.xhr.getResponseHeader("HX-Success"), "getheader from beforeSwap");
+        let targetHeader = e.detail.xhr.getResponseHeader("HX-Success");
+        //console.log(targetHeader, "targetHeader");
+        //console.log(e.detail.target.id, "e.detail.target.id");
+        if (targetHeader == "true") {
+            //console.info("check limiting to just dialog");
+            modal.hide();
+            //e.detail.shouldSwap = false;
+        }
+    });'
+)?>
