Introduces Limatus form for the Contact form with htmx support Expands http verb handling to all crud operations for contacts refactors code to allow for improved naming etc Adds Htmx module Signed-off-by: Joey Smith <jsmith@webinertia.net>
Signed-off-by: Joey Smith <jsmith@webinertia.net>

--- a/src/App/templates/layout/default.phtml
+++ b/src/App/templates/layout/default.phtml
@@ -86,6 +86,11 @@ $this->inlineScript()
                         <?php
                         endif;
                         ?>
+                        <li class="nav-item">
+                            <a href="<?=$this->url('cm.contact', ['list_id' => 1])?>" class="nav-link">
+                                CreateContact Test
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
