--- a/src/ContactManager/templates/partials/create-list-modal.phtml
+++ b/src/ContactManager/templates/partials/create-list-modal.phtml
@@ -1,7 +1,7 @@
 <form
     id="list-form"
     class="modal-content"
-    hx-post="<?=$this->url('cm.create.list')?>"
+    hx-post="<?=$this->url('cm.list')?>"
     hx-target="#list-board"
     hx-swap="beforeend">
 
