--- a/src/App/templates/layout/admin.phtml
+++ b/src/App/templates/layout/admin.phtml
@@ -207,6 +207,7 @@ $this->inlineScript()
     <link rel="shortcut icon" href="https://getlaminas.org/images/favicon/favicon.ico" />
     <?=$this->headTitle('Hop Project')->setSeparator(' - ')->setAutoEscape(false)?>
     <?=$this->headMeta()?>
+    <meta name="htmx-config-response-handling" content='{"code": "422", "swap": true}'>
     <?=$this->headLink()?>
     <?=$this->headScript()?>
 </head>
@@ -533,6 +534,20 @@ echo $this->render('app-partials::bs-alert-sprite');
     <div id="modal" class="modal fade">
         <div id="dialog" class="modal-dialog" hx-target="this"></div>
     </div>
+    <div id="systemMessage" class="container position-fixed bottom-0 start-100 translate-middle-x"></div>
+    <template id="systemMessageTemplate">
+            <div
+                id="liveToast"
+                class="toast"
+                role="alert"
+                aria-live="assertive"
+                aria-atomic="true">
+                <div class="toast-header">
+                    <strong class="me-auto">System Message</strong>
+                </div>
+                <div class="toast-body"></div>
+            </div>
+    </template>
     <?=$this->inlineScript()?>
 </body>
 </html>
