--- a/src/ContactManager/templates/partials/sortable-contact.phtml
+++ b/src/ContactManager/templates/partials/sortable-contact.phtml
@@ -1,11 +1,15 @@
+<?php
+// todo: add a id="contact_$id" to allow targeting a specific contact post update
+?>
 <div class="card mb-4">
     <div class="card-header">
-        <h3 class="card-title"><?=$contact['first_name'] . ' ' . $contact['last_name']?></h3>
+        <h3 class="card-title"><?=$this->contact->first_name . ' ' . $this->contact->last_name?></h3>
     </div>
     <div class="card-body">
         <div id="revenue-chart"></div>
     </div>
     <ul class="list-group list-group-flush">
-        <li class="list-group-item">Email: <?=$contact['email']?></li>
+        <li class="list-group-item">Email: <?=$this->contact->email?></li>
     </ul>
 </div> <!-- /.card -->
+
